deploy/yamls/spring-petclinic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: spring-petclinic
  name: spring-petclinic
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: spring-petclinic
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: spring-petclinic
      name: spring-petclinic
    spec:
      containers:
        - image: quay.io/demo-proj/spring-petclinic:latest
          imagePullPolicy: Always
          name: spring-petclinic
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
      securityContext: {}
status: {}
