deploy/yamls/demo-proj-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: demo-proj
  name: demo-proj
spec:
  rules:
    - host: demo-proj.com
      http:
        paths:
          - backend:
              service:
                name: spring-petclinic
                port:
                  name: port-8080
            path: /spring-petclinic
            pathType: Prefix
status:
  loadBalancer: {}
